<resources>
    <string name="app_name">Trivia</string>
    <string name="title">Trivia</string>
    <string name="true_title">True</string>
    <string name="false_title">False</string>
    <string name="previous_button">previous button</string>
    <string name="next_button">next button</string>
    <string name="question_counter">1 out of 100</string>
    <string name="question_textView">This is where we are going to add something!!</string>
    <string name="correct_answer">Correct!!</string>
    <string name="wrong_answer">Wrong!</string>
</resources>